## Process this file with automake to produce Makefile.in

noinst_LIBRARIES = libaudio.a

AM_CPPFLAGS = \
	-I../../include \
	-DDEBUG -DLINUX

libaudio_a_SOURCES = \
	load.c \
	load_oss.c \
	load_als.c \
	load_snd.c \
	load_aud.c \
	load_mp3.c \
	load_ogg.c \
	load_flc.c \
	load_wav.c \
	load_raw.c
