## Process this file with automake to produce Makefile.in

EXTRA_DIST = \
	ui_gtk.h	\
	ui_gtk1.h	\
	ui_gtk3.h	\
	ui_gtk4.h	\
	ui_gtk8.h	\
	cmd.h		\
	cmds.h		\
	util.h		\
	disk.h		\
	tape.h		\
	tapeadd.h	\
	info.h		\
	debug.h		\
	about.h		\
	color.h		\
	module.h	\
	copying.h	\
	window.h	\
	fbrowse.h	\
	dialog.h	\
	image.h		\
	hedit.h		\
	gtkledline.h
