## Process this file with automake to produce Makefile.in

EXTRA_DIST = \
	ui_gtk.h		\
	ui_gtk_base.h		\
	ui_gtk0.h		\
	ui_gtk1.h		\
	ui_gtk3.h		\
	ui_gtk4.h		\
	ui_gtk6.h		\
	ui_gtk8.h		\
	ui_gtk9.h		\
	ui_gtk_kramermc.h	\
	ui_gtk_muglerpc.h	\
	ui_gtk_vcs80.h		\
	ui_gtk_c80.h		\
	cmd.h			\
	cmds.h			\
	util.h			\
	main.h			\
	disk.h			\
	vdip.h			\
	help.h			\
	tape.h			\
	tapeadd.h		\
	info.h			\
	debug.h			\
	about.h			\
	thanks.h		\
	color.h			\
	module.h		\
	keyboard.h		\
	options.h		\
	selector.h		\
	screenshot.h		\
	copying.h		\
	savemem.h		\
	window.h		\
	fbrowse.h		\
	dialog.h		\
	image.h			\
	hedit.h			\
	wav.h			\
	plotter.h		\
	video.h			\
	videoenc.h		\
	theora.h		\
	gif.h			\
	xvid.h  		\
	dirac.h  		\
	schro.h  		\
	ffmpeg.h  		\
	vnc.h
