## Process this file with automake to produce Makefile.in

noinst_LIBRARIES = libsys_unix.a

AM_CPPFLAGS = \
	-I../../../include

libsys_unix_a_SOURCES = \
	sys_usleep.c \
	sys_basename.c \
	sys_isabsolutepath.c \
	sys_converttime.c \
	sys_localtime.c \
	sys_gettimeofday.c \
	sys_getprogrampath.c \
	sys_gethome.c \
	sys_mkdir.c \
	sys_getdiskinfo.c \
	sys_htonl.c \
	sys_htons.c \
        sys_socket_init.c \
	sys_socket_create.c \
	sys_socket_close.c \
        sys_socket_connect.c \
	sys_socket_recvfrom.c \
	sys_socket_sendto.c \
	sys_socket_send.c
