## Process this file with automake to produce Makefile.in

noinst_LIBRARIES = libui_generic.a

INCLUDES = \
	-I../../../include

CPPFLAGS = \
	-DVERSION=\"$(VERSION)\" \
        -DDATADIR=\"$(pkgdatadir)\"

libui_generic_a_SOURCES = \
	ui_0.cc		\
	ui_1.cc		\
	ui_3.cc		\
	ui_4.cc		\
	ui_8.cc		\
	ui_9.cc		\
	scanline.cc	\
	module.cc	\
	tape.cc
