## Process this file with automake to produce Makefile.in

noinst_LIBRARIES = libui_generic.a

INCLUDES = \
	-I../../../include

libui_generic_a_SOURCES = \
	ui_base.cc	\
	ui_0.cc		\
	ui_1.cc		\
	ui_3.cc		\
	ui_4.cc		\
	ui_6.cc		\
	ui_8.cc		\
	ui_9.cc		\
	ui_led.cc	\
	ui_kramermc.cc	\
	ui_muglerpc.cc	\
	ui_vcs80.cc	\
	ui_c80.cc	\
	scanline.cc	\
	memaccess.cc	\
	module.cc	\
	tape.cc
